samples/errors/traverse-error.pad
{@
    def f():
        1 = 1
    end

    f()
@}